--- a/index.html
+++ b/index.html
@@ -74,6 +74,42 @@
       top: 10px;
       right: 10px;
     }
+    #userDropdown {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      display: none;
+    }
+    #userButton {
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: var(--text);
+    }
+    #dropdownMenu {
+      display: none;
+      position: absolute;
+      right: 0;
+      margin-top: 5px;
+      background: var(--bot-bg);
+      color: var(--text);
+      border-radius: 5px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    }
+    #dropdownMenu button {
+      display: block;
+      padding: 8px 12px;
+      border: none;
+      background: transparent;
+      color: var(--text);
+      width: 100%;
+      text-align: left;
+      cursor: pointer;
+    }
+    #dropdownMenu button:hover {
+      background: rgba(255,255,255,0.1);
+    }
     #chatUI {
       flex: 1;
       display: flex;
@@ -169,7 +205,7 @@
   </style>
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js';
-    import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js';
+    import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyBy8bjMRk69llFZ7bf2QosGOUIa4zEFGS8",
@@ -185,22 +221,37 @@
     const auth = getAuth();
     const provider = new GoogleAuthProvider();
 
-    document.getElementById('googleSignIn').addEventListener('click', () => {
+    const signInBtn = document.getElementById('googleSignIn');
+    const dropdown = document.getElementById('userDropdown');
+    const dropdownMenu = document.getElementById('dropdownMenu');
+    const userButton = document.getElementById('userButton');
+
+    signInBtn.addEventListener('click', () => {
       signInWithPopup(auth, provider)
-        .then((result) => {
-          document.getElementById('loginPage').classList.add('hidden');
-          document.getElementById('chatUI').classList.remove('hidden');
-        })
-        .catch((error) => {
-          alert('Login failed: ' + error.message);
-        });
+        .then(() => {})
+        .catch((error) => alert('Login failed: ' + error.message));
     });
 
     onAuthStateChanged(auth, (user) => {
       if (user) {
         document.getElementById('loginPage').classList.add('hidden');
         document.getElementById('chatUI').classList.remove('hidden');
+        signInBtn.style.display = 'none';
+        dropdown.style.display = 'block';
+      } else {
+        signInBtn.style.display = 'block';
+        dropdown.style.display = 'none';
       }
+    });
+
+    userButton.addEventListener('click', () => {
+      dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+    });
+
+    document.getElementById('logoutBtn').addEventListener('click', () => {
+      signOut(auth).then(() => {
+        location.reload();
+      });
     });
   </script>
 </head>
@@ -208,6 +259,12 @@
   <div id="loginPage">
     <h1>Ripple Studio AI</h1>
     <button id="googleSignIn">Sign in with Google</button>
+    <div id="userDropdown">
+      <button id="userButton">👤</button>
+      <div id="dropdownMenu">
+        <button id="logoutBtn">Logout</button>
+      </div>
+    </div>
   </div>
   <div id="chatUI" class="hidden">
     <select id="themeToggle">
